--- a/index.html
+++ b/index.html
@@ -1761,7 +1761,7 @@
 	<a href="http://m.ericwillems.com/"target="_blank">m.ericwillems.com</a>
 	<a href="http://m.cheol.net/"target="_blank">m.cheol.net</a>
 	<a href="http://business2011.inetglobal.com/"target="_blank">business2011.inetglobal.com</a>
-	<a href="http://http://m.dogancan.net/"target="_blank">m.dogancan.net</a>
+	<a href="http://m.dogancan.net/"target="_blank">m.dogancan.net</a>
    </div>
 </body>
 
