--- a/index.html
+++ b/index.html
@@ -1576,7 +1576,7 @@
                                                 </div>
 
                                                 <div class="ProductItem-details-excerpt" data-content-field="excerpt">
-                                                    <p>Mainkan Slot Online dengan <a href="http://m.capicue.com/">Linabet69</a>. Jika Anda mencari cara menyenangkan untuk Menghasilkan Uang, bermain slot online dengan Linabet69 bisa menjadi solusi tepat untuk Anda. Mainkan slot online Linabet69 untuk peluang Anda menang besar! Nantikan slot jackpot yang mengesankan, serta permainan tradisional & baru untuk dimainkan di perangkat apa pun!</p>
+                                                    <p>Raih peluang menang lebih besar di Linabet69! Nikmati game seru, bonus menarik, dan strategi jitu untuk meningkatkan kemenangan Anda di situs judi online terpercaya.</p>
 
 
 
